# JYD2026

./: .gitignore  FRONTEND_DECOUPLING_PLAN.md  FRONTEND_RAS_DESIGN_PLAN.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_STATUS.md  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  SOC_AXI_INTEGRATION_PLAN.md  TAGE2方向预测器推荐方案与决策记录.md  TODO.md  build  coe_branch_prediction_results.md  dual_issue_rate_analysis.md  fix_and_build.sh  raw_hazard_cycles_analysis.md  run_vivado_flow.sh
.claude/: settings.json  settings.local.json
.obsidian/: appearance.json  workspace.json
00_AI_Rules/: README.md  address_map_rules.md  architecture.md  global_rules.md  project_context.md  tradeoffs.md  tradeoffs_brief.md
00_AI_Rules/archive/: doc_guidelines.md
00_AI_Rules/archive/brief/: status.md
00_AI_Rules/archive/design_rules/: isa_encoding.md  pipeline.md
00_AI_Rules/archive/dual_issue/: architecture.md  dev_plan.md  status.md
00_AI_Rules/brief/: design_decisions_brief.md  status.md
00_AI_Rules/contest/: README.md  writing_context.md
00_AI_Rules/design_rules/: contest_constraints.md  isa_encoding.md  pipeline.md  spec_format.md  timing_notation.md
00_AI_Rules/dual_issue/: architecture.md  dev_plan.md  status.md
00_AI_Rules/selfuse/: TODO.md  bp_analysis.md  cache_analysis.md  design_decisions.md  digital_twin_integration.md  milestones.md
01_Docs/coe/: README.md
02_Design/: FRONTEND_STAGE1_LEGACY_PREDICTOR_RETIRE_PLAN.md  FRONTEND_STAGE1_PREDICTOR_AI_PROMPT.md  README.md
02_Design/coe/: README.md  analyze_coe.py  bp_param_sweep.py  bp_simulator.py  bp_sweep.py  bp_test_current.py  cache_sim.py  cache_sweep.py  convert_irom64_coe.py  disasm_coe.py  prepare_new_coe.py  split_coe.py
02_Design/cpp_arch_explorer/: CMakeLists.txt  DIRECTION_STUDY_20260712.md  FIRST_ROUND_RESULTS.md  FRONTEND_MODEL_REVIEW_20260714.md  README.md  README_MASTER_20260712.md  TAGGED_ONLY_F1_STUDY_20260714.md
02_Design/cpp_arch_explorer/results_archive/direction_path_study_20260711/: aggregate.csv  per_program.csv
02_Design/cpp_arch_explorer/src/: direction_main.cpp  direction_predictor.cpp  direction_predictor.hpp  direction_predictor_tests.cpp  fdq_main.cpp  fdq_model.hpp  frontend_main.cpp  frontend_model.hpp  frontend_model_tests.cpp  main.cpp  predictor.hpp  rv32_sim.cpp  rv32_sim.hpp
02_Design/model/cpp_arch_explorer/: CMakeLists.txt  DIRECTION_STUDY_20260712.md  FRONTEND_MODEL_REVIEW_20260714.md  README.md  README_MASTER_20260712.md  TAGGED_ONLY_F1_STUDY_20260714.md
02_Design/model/cpp_arch_explorer/scripts/: run_backend_iq_low_depth.sh  run_forwarding_rtl_cosim.sh
02_Design/model/cpp_arch_explorer/src/: backend_main.cpp  backend_model.cpp  backend_model.hpp  backend_model_tests.cpp  direction_main.cpp  fdq_main.cpp  fdq_model.cpp  fdq_model_tests.cpp  forwarding_main.cpp  forwarding_model.cpp  forwarding_model.hpp  forwarding_model_tests.cpp  forwarding_rtl_cosim.cpp  frontend_main.cpp  frontend_model.cpp  main.cpp  mul_forwarding_rtl_cosim.cpp  predictor.cpp  rv32_sim.cpp  rv32_sim.hpp
02_Design/param_evaluation/: README.md  bp_coldstart_sim.py  bp_scripts.md  bp_sweep.py  bp_test_current.py  cache_scripts.md  cache_sim.py
02_Design/riscv_tests/: SCRIPT_CLASSIFICATION.md  TODO_ZICSR.md  build_tests.sh  run_all.sh  run_axi_adapter.sh  run_coe_perf.sh  run_perf.sh  run_student_top_axi.sh  run_student_top_coe.sh  test_coverage.md
02_Design/rtl/: alu.sv  alu_src_mux.sv  branch_predictor.sv  branch_unit.sv  cpu_defs.sv  cpu_top.sv  csr_trap_unit.sv  dcache.sv  decoder.sv  dual_issue_decider.sv  ex_mem_reg.sv  ex_mem_reg_s1.sv  ex_stage_ctrl.sv  forwarding.sv  frontend_ftq.sv  id_ex_reg.sv  id_ex_reg_s1.sv  id_stage_derive.sv  if_id_reg.sv  if_stage_buffer.sv  irom_addr_ctrl.sv  mem_interface.sv  mem_wb_reg.sv  mem_wb_reg_s1.sv  memory_access_unit.sv  mmio_bridge.sv  muldiv_unit.sv  next_pc_mux.sv  pc_reg.sv  redirect_ctrl.sv  regfile.sv  student_top.sv  wb_mux.sv
02_Design/scripts/: import_all.tcl
02_Design/sim/: tb_student_top.sv
02_Design/spec/: alu_spec.md  branch_prediction_spec.md  branch_predictor_spec.md  branch_unit_spec.md  dcache_spec.md  decoder_spec.md  forwarding_spec.md  front_end_predictor_spec.md  if_id_reg_spec.md  imm_gen_spec.md  regfile_spec.md
03_Analysis/: README.md  microarch_decision_map.md  run_vivado_flow.tcl
03_Analysis/profiling/: README.md  document_rules.md  profile_contract.md  run_profile.py
03_Timing_Analysis/: build.sh  check_coe_assets.py  large_pipeline_arch_estimator.py  pipeline_split_estimator.py  rebind_project_rtl_sources.tcl  report_stage_timing.tcl  run_physopt_candidate.tcl  run_synth_impl.tcl  run_vivado_flow.tcl  sta.sh  stage_timing_report.txt
03_Timing_Analysis/constraints/: cpu_top_timing_only.xdc
03_Timing_Analysis/scripts/: How to use  report_stage_timing.tcl  stage_timing.tcl
05_Experiment_Records/: README.md
05_Experiment_Records/20260509_alu_branch_fusion_estimate/: README.md  commands.sh  env.txt
05_Experiment_Records/20260509_baseline_assessment/: README.md  commands.sh  env.txt
05_Experiment_Records/20260509_branch_predictor_estimate/: README.md  commands.sh  env.txt
05_Experiment_Records/20260509_large_pipeline_arch_eval/: README.md  commands.sh  env.txt
05_Experiment_Records/20260509_pipeline_split_estimate/: README.md  commands.sh  env.txt
JYD2025_Contest-rv32i/: build_and_timing.tcl  digital_twin.xpr
PhysicalTwin_Nexys4DDR/: .gitignore  README.md  run_build.sh
PhysicalTwin_Nexys4DDR/constraints/: board.xdc
PhysicalTwin_Nexys4DDR/rtl/: DRAM4MyOwn.sv  IROMEven32.sv  IROMOdd32.sv  board_top.sv  dcache_data_ram.sv  mmio_bridge.sv  seg8_hex_scan.sv
PhysicalTwin_Nexys4DDR/scripts/: prepare_mem.py
PhysicalTwin_Nexys4DDR/tcl/: build_project.tcl
PhysicalTwin_XC7A35T/: .gitignore  README.md  run_build.sh
PhysicalTwin_XC7A35T/constraints/: board.xdc
PhysicalTwin_XC7A35T/rtl/: DRAM4MyOwn.sv  IROMEven32.sv  IROMOdd32.sv  board_top.sv  dcache_data_ram.sv  mmio_bridge.sv  seg6_hex_scan.sv
PhysicalTwin_XC7A35T/scripts/: prepare_mem.py
PhysicalTwin_XC7A35T/tcl/: build_project.tcl
(+549 files in other folders)
